--- a/H1_Problem2.ipynb
+++ b/H1_Problem2.ipynb
@@ -215,7 +215,7 @@
         "        ax.scatter(point[0], point[1], color=color, edgecolors='red', label=f'Test Point ({classification})')\n",
         "\n",
         "    # Place the legend outside the plot box\n",
-        "    #ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
+        "    ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left')\n",
         "    plt.xlabel('Latitude')\n",
         "    plt.ylabel('Longitude')\n",
         "    plt.title('Land, Sea, & Coastline Points with Model')\n",
